--- a/css/csscheatsheet/css/style.css
+++ b/css/csscheatsheet/css/style.css
@@ -25,9 +25,6 @@ a:active{
     color:green;
 }
 
-a:visited{
-}
-
 .container{
     width:80%;
     margin:auto
@@ -38,6 +35,10 @@ a:visited{
     color:#fff;
     padding: 10px 15px;
     border:none;
+}
+
+.clr{
+    clear:both;
 }
 
 .button:hover{
@@ -119,5 +120,74 @@ a:visited{
 .my-form input[type="text"], .my-form textarea{
     padding: 8px;
     width: 100%;
+}
+
+.block{
+    float:left;
+    width:33.3%;
+    border:1px solid #ccc;
+    padding:10px;
+    box-sizing: border-box;
+}
+
+#main-block{
+    float:left;
+    width:70%;
+    padding:15px;
+    box-sizing: border-box;
+}
+#sidebar{
+    float:right;
+    width: 30%;
+    background-color: #333;
+    color:#fff;
+    padding:15px;
+    box-sizing: border-box;
+}
+
+.p-box{
+    width:800px;
+    height:500px;
+    border:1px solid #000;
+    margin-top: 30px;
+    position: relative;
+    background-image:url('../images/bgimage.jpg');
+
+    background-repeat: no-repeat;
+    background-position: 100px 200px;
+    background-position: center top ;
+}
+
+.p-box  h1{
+    position:absolute;
+    top:100px;
+    left:200px;
+}
+
+.p-box h2{
+    position:absolute;
+    bottom:40px;
+    right:100px;
+}
+
+.fix-me{
+    position:fixed;
+    top:400px;
+}
+
+.my-list li:first-child{
+    background: red;
+}
+
+.my-list li:last-child{
+    background: blue;
+}
+
+.my-list li:nth-child(5){
+    background: yellow;
+}
+
+.my-list li:nth-child(even){
+    background: grey;
 }
 
