--- a/htmltutorial/style.css
+++ b/htmltutorial/style.css
@@ -65,17 +65,27 @@ li {
 .row {
     width: 100%;
     max-width: 1300px;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    align-items: center;
 }
 
+#about,
+#discord,
+#contact,
+#footer {
+    padding: 48px 0;
+}
 
-/*  ABOUT */
+/*  
+
+ABOUT 
+
+*/
 
 #about {
-    padding: 48px 0;
+background-color: #f8ffdc;
 }
 
 h2 {
@@ -91,12 +101,147 @@ h2 {
 }
 
 .about__img--wrapper {
-    width: 40%;
+    width: 60%;
+    padding: 0 24px;
 }
 
 img {
     width: 100%;
 }
 
-.section__description--wrapper
+.section__description--wrapper {
+    width: 60%;
+    padding: 0 24px;
+}
 
+.section__description--para {
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 24px;
+}
+
+/*  
+
+DISCORD 
+
+*/
+
+#discord {
+    background-color: #cefeff;
+}
+
+/*  
+
+CONTACT 
+
+*/
+
+#contact {
+    background-color: #dce9ff;
+}
+
+form {
+    width: 100%;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 0 24px;
+}
+
+input, textarea {
+    margin-bottom: 24px;
+    font-size: 20px;
+    padding: 6px 12px;
+}
+
+/*  
+
+FOOTER 
+
+*/
+
+footer {
+    border-color: #aaf5ff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.footer__logo {
+    max-width: 480px;
+    margin-bottom: 16px;
+}
+
+.footer__links {
+    margin-bottom: 32px;
+}
+
+.footer__link {
+    padding: 0 16px;
+}
+
+/*  SMALL PHONES, TABLETS, LARGE SMARTPHONES */
+
+@media (max-width: 728px) {
+    .row {
+        flex-direction: column;
+    }
+
+    .home__description {
+        margin-bottom: 24px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .home__description--button {
+        min-width: 240px;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 60px;
+    }
+
+    .subheader {
+        text-align: center;
+        font-size: 28px;
+    }
+
+    ul {
+        display: none;
+    }
+
+    .section__description {
+        flex-direction: column;
+    }
+
+    .section__description--wrapper {
+        width: 100%;
+    }
+
+    .about__img--wrapper {
+        width: 100%;
+    }
+
+    #discord .section__description {
+        flex-direction: column-reverse;
+    }
+
+    footer {
+        padding: 48px 24px;
+    }
+
+    .footer__logo {
+        max-width: 360px;
+    }
+
+    .footer__link {
+        padding: 0 4px;
+        font-size: 18px;
+    }
+
+
+}
